--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -195,7 +195,27 @@ title = {C++ Templates are Turing Complete}
   url = {http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=50372},
   year = 2012
 }
+@online{godbolt,
+  title={Compiler explorer},
+  url={https://godbolt.org/},
+  author={Godbolt, Matt},
+  urldate={2021-12-13}
+} 
 
+@online{wiki:Marshalling,
+   author = "Wikipedia",
+   title = "{Marshalling (computer science)} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2021",
+   url = {http://en.wikipedia.org/w/index.php?title=Marshalling\%20(computer\%20science)&oldid=1057733956},
+   urldate = {2021-12-13}
+ }
+@inproceedings{lattner2008llvm,
+  title={LLVM and Clang: Next generation compiler technology},
+  author={Lattner, Chris},
+  booktitle={The BSD conference},
+  volume={5},
+  year={2008}
+}
 @article{cpp:function_overload_frontend,
   title={Research on the Design of Function Overload Resolution by C++ Compiler Front End [J]},
   author={Kang, He and Chao, Chen and Jian, Liu},
