--- a/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
+++ b/Papers/WUT-Master-Thesis/tex/2-Istniejace.tex
@@ -65,6 +65,7 @@ Metaprogramowanie szablonowe powstało nie jako świadomy wysiłek twórców ję
 \subsubsection{Koncepty}
 Koncepty (ang: concept) zostały wprowadzone w C++20 \cite{ISO:cpp20} jako sposób na lepsze dokumentowanie szablonów oraz czytelniejsze komunikaty o błędzie w wypadku niepoprawnego użycia.
 Używa się ich do ograniczania, które typy mogą zostać wykorzystane w danym szablonie.
+Stanowią praktyczną aplikację idei ograniczonego polimorfizmu z teorii typów \cite{Cardelli85onunderstanding}.
 
 Koncepty są definiowane jako zbiór wymagań, które typ musi spełnić.
 Mogą to być proste wyrażenia logiczne, jak i weryfikowanie czy dana metoda istnieje oraz jaki typ zwraca.
