--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -61,6 +61,23 @@ doi = {10.1145/3354584}
     url = "https://docs.microsoft.com/en-us/dotnet/api/system.object.gettype?view=net-5.0#System_Object_GetType",
     urldate = {2021-11-17}
 }
+ @online{roslyn:source_generators,
+  title={Roslyn/Source-generators.md at main · dotnet/Roslyn},
+  url={https://github.com/dotnet/roslyn/blob/main/docs/features/source-generators.md},
+  year={2021},
+  month={5},
+ urldate={2021-12-15}
+} 
+
+@article{Cardelli85onunderstanding,
+    author = {Luca Cardelli and Peter Wegner},
+    title = {On understanding types, data abstraction, and polymorphism},
+    journal = {ACM COMPUTING SURVEYS},
+    year = {1985},
+    volume = {17},
+    number = {4},
+    pages = {471--522}
+}
 
 @online{csharp:assemblies,
     title = "Assemblies in .Net",
@@ -178,7 +195,7 @@ title = {C++ Templates are Turing Complete}
   added-at = {2012-10-08T01:13:47.000+0200},
   address = {Geneva, Switzerland},
   author = {{ISO}},
-  bibdate = {Mon Dec 19 11:12:12 2011},
+  bibdate = {Mon 12 19 11:12:12 2011},
   bibsource = {http://www.math.utah.edu/pub/tex/bib/isostd.bib},
   biburl = {https://www.bibsonomy.org/bibtex/24b660c16d9a5ab0ad595b1555402c797/gron},
   day = 28,
@@ -229,7 +246,7 @@ title = {C++ Templates are Turing Complete}
     school  = "{Computer Science Dept., University of Illinois at Urbana-Champaign}",
     year    = {2002},
     address = {Urbana, IL},
-    month   = {Dec}
+    month   = {12}
   }
   @article{10.1145/2103621.2103709,
 author = {Zhao, Jianzhou and Nagarakatte, Santosh and Martin, Milo M.K. and Zdancewic, Steve},
