--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -8,6 +8,25 @@
   publisher={Springer Berlin Heidelberg}
 }
 
+@article{nino2007:cost_type_erasure_java,
+  title={The cost of erasure in Java generics type system},
+  author={Ni{\~n}o, Jaime},
+  journal={Journal of Computing Sciences in Colleges},
+  volume={22},
+  number={5},
+  pages={2--11},
+  year={2007},
+  publisher={Consortium for Computing Sciences in Colleges}
+}
+
+@article{becker2007:type_erasure,
+  title={Type erasure in C++: The glue between object oriented and generic programming},
+  author={Becker, Thomas},
+  journal={Multiparadigm Programming},
+  year={2007},
+  publisher={Citeseer}
+}
+
 @book{gang_of_four:design_patterns,
 author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
 title = {Design Patterns: Elements of Reusable Object-Oriented Software},
@@ -61,6 +80,16 @@ doi = {10.1145/3354584}
     url = "https://docs.microsoft.com/en-us/dotnet/api/system.object.gettype?view=net-5.0#System_Object_GetType",
     urldate = {2021-11-17}
 }
+
+@incollection{strauss2019new_cs_new_features,
+  title={The New Features of C\# 8.0},
+  author={Strauss, Dirk},
+  booktitle={Exploring Advanced Features in C\#},
+  pages={105--124},
+  year={2019},
+  publisher={Springer}
+}
+
  @online{roslyn:source_generators,
   title={Roslyn/Source-generators.md at main · dotnet/Roslyn},
   url={https://github.com/dotnet/roslyn/blob/main/docs/features/source-generators.md},
