--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -425,6 +425,14 @@ institution = {ECMA (European Association for Standardizing Information and Comm
     year   = "2005"
 }
 
+@inproceedings{kennedy2001:design_clr_generics,
+  title={Design and implementation of generics for the. net common language runtime},
+  author={Kennedy, Andrew and Syme, Don},
+  booktitle={Proceedings of the ACM SIGPLAN 2001 conference on Programming language design and implementation},
+  pages={1--12},
+  year={2001}
+}
+
 % Źródło innego typu, np. repozytorium na GitHubie.
 @misc{dcp19,
     author       = "Brodzki, Artur M.",
